...
                    ),
                    SizedBox(
                      height: screenHeight * .03,
                    ),
                    AppInput(
                      controller: _emailController,
                      label: "Email",
                      placeholder: "Entez votre addresse mail",
                      validator: (value) {
                        return Validators.required("Email", value);
                      },
                      textInputType: TextInputType.emailAddress,
                    ),
                    AppInput(
                      controller: _passwordController,
                      label: "Mot de passe",
                      placeholder: "Entez votre mot de passe",
                      validator: (value) {
                        return Validators.required("Mot de passe", value);
                      },
                      maxLines: 1,
                      textInputType: TextInputType.visiblePassword,
...
